route and page changes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Water Level Report</title>
-</head>
-<body>
-    <h1>Welcome to Water level Report</h1>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Welcome to node</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div class="text">
+      <h1>Water Level Reports</h1>
+      <!-- <img src="./node.png" alt="loading..." /> -->
+    </div>
+    <div class="row">
+      <div class="heading-item">Date</div>
+      <div class="heading-item">Time</div>
+      <div class="heading-item">Water Level</div>
+      <div class="heading-item">Status</div>
+      <div class="heading-item">Latitude</div>
+      <div class="heading-item">Longitude</div>
+    </div>
+    <div id="row-item" />
+    <script src="./waterlevel.js" async defer></script>
+  </body>
 </html>
