feat: added changes html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to node</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
   <body>
     <div class="text">
@@ -22,6 +22,6 @@
       <div class="heading-item">Longitude</div>
     </div>
     <div id="row-item" />
-    <script src="./waterlevel.js" async defer></script>
+    <script src="./waterlevel.js" type=application/javascript></script>
   </body>
 </html>
